# compare-api-python-client

./: .coveragerc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .mailmap  .markdownlint.json  .pylintrc  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  deploy.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
draftable/: __init__.py  __main__.py  cli.py  client.py  test_client.py
draftable/commands/: __init__.py  dr_compare.py
draftable/endpoints/: __init__.py  exceptions.py  urls.py  validation.py
draftable/endpoints/comparisons/: __init__.py  changes.py  comparison.py  comparisons.py  exceptions.py  identifier.py  sides.py  signing.py  test_changes.py  test_sides.py  urls.py  validation.py
draftable/endpoints/exports/: __init__.py  export.py  exports.py
draftable/transport/: __init__.py  rest_client.py
draftable/utilities/: __init__.py  test_urls.py  timestamp.py  timezone.py  urls.py
example/: simple.py
scripts/: dr-compare
test-files/: change-details.json  hello-left.rtf  hello-left.txt  hello-right.rtf  hello-right.txt
