[metadata]
name = draftable-compare-api
version = file: VERSION
description = Client library for the Draftable document comparison API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/draftable/compare-api-python-client
author = Draftable
author_email = contact@draftable.com
maintainer = Draftable
maintainer_email = contact@draftable.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
keywords =
    draftable
    api
    compare
    comparison
    comparisons
    pdf
    word
    document
    documents
    doc
    docx
    powerpoint
    presentation
    presentations
    ppt
    pptx
project_urls =
    Changelog = https://github.com/draftable/compare-api-python-client/blob/stable/CHANGELOG.md
    Documentation = https://github.com/draftable/compare-api-python-client/blob/stable/README.md
    Source = https://github.com/draftable/compare-api-python-client
    Tracker = https://github.com/draftable/compare-api-python-client/issues

[options]
zip_safe = True
packages = find:
python_requires = >=3.7.*, <4
setup_requires =
    setuptools >= 40.8.0
install_requires =
    importlib_metadata ; python_version < "3.8"
    requests

[options.entry_points]
console_scripts =
    dr-compare = draftable.commands.dr_compare:dr_compare_main

[options.extras_require]
dev =
    black
    check-manifest
    coverage
    flake8
    isort
    mypy
    pylint
    pytest
    pytest-cov
    tox >= 3.3.0
    twine
    types-requests
    types-six
    wheel

[options.packages.find]
include =
    draftable
    draftable.*
